Make buttons functional

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <div class="board"></div>
         </div>
         <div id="legend" class="right_panel col-sm-2">
-            <button id="reset" class="btn-primary btn-lg">Start</button>
-            <button id="reset" class="btn-info btn-lg">Pause</button>
+            <button id="start_stop" class="btn-primary btn-lg">Start</button>
             <button id="reset" class="btn-warning btn-lg">Reset</button>
+            <button id="more_frogs" class="btn-danger btn-lg">More Frogs!</button>
         </div>
         
     </section>
