Create score keeper

--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
             <button id="start_stop" class="btn-primary btn-lg">Start</button>
             <button id="reset" class="btn-warning btn-lg">Reset</button>
             <button id="more_frogs" class="btn-danger btn-lg">More Frogs!</button>
+            <div class="game_info">
+                <h3>Title</h3>
+                <h2 id="score">0</h2>
+            </div>
         </div>
-        
     </section>
 </body>
 
