--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Frog is Happy</title>
     <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css" type="text/javascript">
     <link rel="stylesheet" type="text/css" href="dist/css/style.min.css">
+     <link rel="stylesheet" type="text/css" href="node_modules/font-awesome/css/font-awesome.min.css">
     <script src="node_modules/jquery/dist/jquery.min.js" type="text/javascript"></script>
     <script src="dist/js/script.min.js" type="text/javascript"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
@@ -21,14 +22,39 @@
         <div class="left_panel col-sm-8 col-sm-offset-2">
             <div class="board"></div>
         </div>
-        <div id="legend" class="right_panel col-sm-2">
-            <button id="start_stop" class="btn-primary btn-lg">Start</button>
-            <button id="reset" class="btn-warning btn-lg">Reset</button>
-            <button id="more_frogs" class="btn-danger btn-lg">More Frogs!</button>
-            <div class="game_info">
-                <h3>Title</h3>
-                <h2 id="score">0</h2>
+        <div id="legend" class="right_panel col-sm-2 container-fluid">
+            <div class="row game_buttons">
+                <button id="start_stop" class="btn-primary btn-lg">Start</button>
+                <button id="reset" class="btn-warning btn-lg">Reset</button>
+                <button id="more_frogs" class="btn-danger btn-lg">More Frogs!</button>
+                <div class="game_info">
+                    <h3>Title</h3>
+                    <h2 id="score">0</h2>
+                </div>
             </div>
+            <div class="row">
+                <div class="game_controller container-fluid">
+                    <div class="row">
+                        <button class="col-sm-4 col-sm-offset-4">
+                            <i class="fa fa-caret-up"></i>
+                        </button>
+                    </div>
+                    <div class="row">
+                        <button class="col-sm-4">
+                            <i class="fa fa-caret-left"></i>
+                        </button>
+                        <button class="col-sm-4 col-sm-offset-4">
+                            <i class="fa fa-caret-right"></i>
+                        </button>
+                    </div>
+                    <div class="row">
+                        <button class="col-sm-4 col-sm-offset-4">
+                            <i class="fa fa-caret-down"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
     </section>
 </body>
