--- a/src/index.html
+++ b/src/index.html
@@ -9,29 +9,27 @@
     <link rel="stylesheet" type="text/css" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" type="text/javascript">
     <link rel="stylesheet" type="text/css" href="../node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <!-- /build -->
-    <!-- build:remove:dist -->
+    <!-- /build -->    <!-- build:remove:dist -->
     <script src="../node_modules/jquery/dist/jquery.min.js" type="text/javascript"></script>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="../node_modules/jquery-mobile/dist/jquery.mobile.min.js" type="text/javascript"></script>
     <script src="js/script.js" type="text/javascript"></script>
-    <!-- /build -->
-</head>
+    <!-- /build --></head>
 
 <body>
     <header id="header" class="container-fluid">
         <div class="row">
             <div class="col-xs-4">
                 <div class="game_info">
-                    <span class='title'>Frog Is Happy</span>
+                    <span class="title">Frog Is Happy</span>
                     <span>Score: </span><span id="score">0</span>
                 </div>
             </div>
             <div class="col-xs-8">
                 <div class="game_buttons">
-                    <button id="start_stop" class="btn-primary">Start</button>
-                    <button id="reset" class="btn-warning">Reset</button>
-                    <button id="more_frogs" class="btn-danger">More Frogs!</button>
+                    <button id="start_stop" class="btn-primary ui-btn ui-shadow ui-corner-all">Start</button>
+                    <button id="reset" class="btn-warning ui-btn ui-shadow ui-corner-all">Reset</button>
+                    <button id="more_frogs" class="btn-danger ui-btn ui-shadow ui-corner-all">More Frogs!</button>
                 </div>
             </div>
         </div>
