--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <!-- build:remove:dist -->
     <link rel="stylesheet" type="text/css" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" type="text/javascript">
     <link rel="stylesheet" type="text/css" href="../node_modules/font-awesome/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Seymour+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- /build -->
     <!-- build:remove:dev -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Seymour+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/style.min.css">
     <!-- /build -->
     <!-- build:remove:dist -->
@@ -29,16 +31,16 @@
     <!-- /build -->
 </head>
 
-<body>
-    <header id="header" class="container-fluid">
+<body class="container">
+    <header id="header" class="row">
         <div class="row">
-            <div class="col-xs-4">
+            <div class="col-xs-6">
                 <div class="game_info">
-                    <span class="title">Frog Is Happy</span>
-                    <span>Score: </span><span id="score">0</span>
+                    <div class="title">Frog Is Happy</div>
+                    <div>Score: <span id="score">0</span></div>
                 </div>
             </div>
-            <div class="col-xs-8">
+            <div class="col-xs-6">
                 <div class="game_buttons">
                     <button id="start_stop" class="btn-primary ui-btn ui-shadow ui-corner-all">Start</button>
                     <button id="reset" class="btn-warning ui-btn ui-shadow ui-corner-all">Reset</button>
@@ -49,10 +51,10 @@
     </header>
     <!-- /header -->
     <section class="row">
-        <div class="left_panel col-sm-8 col-xs-12">
+        <div class="">
             <div class="board"></div>
         </div>
-        <div id="legend" class="right_panel col-sm-4 container-fluid col-xs-12">
+        <div id="legend" class="">
             <div class="row">
                 <div class="game_controller container-fluid col-xs-12">
                     <div class="row">
