--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <!-- build:remove:dist -->
     <link rel="stylesheet" type="text/css" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" type="text/javascript">
     <link rel="stylesheet" type="text/css" href="../node_modules/font-awesome/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Seymour+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- /build -->    <!-- build:remove:dist -->
     <script src="../node_modules/jquery/dist/jquery.min.js" type="text/javascript"></script>
@@ -16,16 +17,16 @@
     <script src="js/script.js" type="text/javascript"></script>
     <!-- /build --></head>
 
-<body>
-    <header id="header" class="container-fluid">
+<body class="container">
+    <header id="header" class="row">
         <div class="row">
-            <div class="col-xs-4">
+            <div class="col-xs-6">
                 <div class="game_info">
-                    <span class="title">Frog Is Happy</span>
-                    <span>Score: </span><span id="score">0</span>
+                    <div class="title">Frog Is Happy</div>
+                    <div>Score: <span id="score">0</span></div>
                 </div>
             </div>
-            <div class="col-xs-8">
+            <div class="col-xs-6">
                 <div class="game_buttons">
                     <button id="start_stop" class="btn-primary ui-btn ui-shadow ui-corner-all">Start</button>
                     <button id="reset" class="btn-warning ui-btn ui-shadow ui-corner-all">Reset</button>
@@ -36,10 +37,10 @@
     </header>
     <!-- /header -->
     <section class="row">
-        <div class="left_panel col-sm-8 col-xs-12">
+        <div class="">
             <div class="board"></div>
         </div>
-        <div id="legend" class="right_panel col-sm-4 container-fluid col-xs-12">
+        <div id="legend" class="">
             <div class="row">
                 <div class="game_controller container-fluid col-xs-12">
                     <div class="row">
