Add new keydown functionality

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="col-xs-6">
                 <div class="game_buttons">
                     <button id="start_stop" class="btn-primary ui-btn ui-shadow ui-corner-all">Start</button>
-                    <button id="reset" class="btn-warning ui-btn ui-shadow ui-corner-all">Reset</button>
+                    <button id="reset" class="btn-warning ui-btn ui-shadow ui-corner-all">Rese<span class="underline">t</span></button>
                     <button id="more_frogs" class="btn-danger ui-btn ui-shadow ui-corner-all">More Frogs!</button>
                 </div>
             </div>
