Add non-functional option button with accomodating styles

--- a/index.html
+++ b/index.html
@@ -34,17 +34,18 @@
 <body class="container">
     <header id="header" class="row">
         <div class="row">
-            <div class="col-xs-6">
+            <div class="col-sm-4 col-xs-3">
                 <div class="game_info">
-                    <div class="title">Frog Is Happy</div>
+                    <div class="title no-mobile">Frog Is Happy</div>
                     <div>Score: <span id="score">0</span></div>
                 </div>
             </div>
-            <div class="col-xs-6">
-                <div class="game_buttons">
-                    <button id="start_stop" class="btn-primary ui-btn ui-shadow ui-corner-all">Start</button>
-                    <button id="reset" class="btn-warning ui-btn ui-shadow ui-corner-all">Rese<span class="underline">t</span></button>
-                    <button id="more_frogs" class="btn-danger ui-btn ui-shadow ui-corner-all">More Frogs!</button>
+            <div class="game_buttons col-sm-8 col-xs-9">
+                <div class="">
+                    <button id="start_stop" class="btn-primary ui-btn ui-shadow ui-corner-all">S<span class="no-mobile">tart</span></button>
+                    <button id="reset" class="btn-warning ui-btn ui-shadow ui-corner-all">R<span class="no-mobile">ese<span class="underline">t</span></span></button>
+                    <button id="more_frogs" class="btn-danger ui-btn ui-shadow ui-corner-all">M<span class="no-mobile">ore Frogs!</span></button>
+                    <button id="options"><i class="fa fa-bars"></i></button>
                 </div>
             </div>
         </div>
