Change fruit to frogs

--- a/index.html
+++ b/index.html
@@ -102,20 +102,20 @@
                             <input type="radio" name="speed" id="fast" value="50" autocomplete="off" data-role="none">Fast
                         </label>
                     </div>
-                    <h2>Board Dimensions</h2>
+                    <h2>Snake Size</h2>
                     <h5>Must reset game for new board size</h5>
                     <div class="btn-group btn-group-lg" data-toggle="buttons" data-role="none">
                         <label class="btn btn-default" data-role="none">
-                            <input type="radio" name="dimensions" id="sm-board" value="15" autocomplete="off" data-role="none">15 x 15
+                            <input type="radio" name="dimensions" id="sm-board" value="15" autocomplete="off" data-role="none">Big
                         </label>
                         <label class="btn btn-default active">
-                            <input type="radio" name="dimension" id="med-board" value="25" autocomplete="off" checked data-role="none">25 x 25
+                            <input type="radio" name="dimension" id="med-board" value="25" autocomplete="off" checked data-role="none">Normal
                         </label>
                         <label class="btn btn-default">
-                            <input type="radio" name="dimension" id="lg-board" value="50" autocomplete="off" data-role="none">50 x 50
+                            <input type="radio" name="dimension" id="lg-board" value="50" autocomplete="off" data-role="none">Small
                         </label>
                         <label class="btn btn-default">
-                            <input type="radio" name="dimension" id="xlg-board" value="100" autocomplete="off" data-role="none">100 x 100
+                            <input type="radio" name="dimension" id="xlg-board" value="100" autocomplete="off" data-role="none">Tiny
                         </label>
                     </div>
                     <h2>Theme</h2>
