Add highscore functionality with localStorage and update mobileControls

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <div class="game_info">
                     <div class="title no-mobile">Frog Is Happy</div>
                     <div>Score: <span id="score">0</span></div>
+                    <div>High Score: <span id="highscore">0</span></div>
                 </div>
             </div>
             <div class="game_buttons col-sm-8 col-xs-9">
