--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="snakegame";>
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Frog is Happy</title>
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.ico">
+    
+    <!-- Backand SDK for Angular -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
+    <script src="//cdn.backand.net/backand/dist/1.8.2/backand.min.js"></script>
+
     <!-- build:remove:dist -->
     <link rel="stylesheet" type="text/css" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" type="text/javascript">
     <link rel="stylesheet" type="text/css" href="../node_modules/font-awesome/css/font-awesome.min.css">
@@ -23,6 +28,7 @@
     <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="../node_modules/jquery-mobile/dist/jquery.mobile.min.js" type="text/javascript"></script>
     <script src="js/script.js" type="text/javascript"></script>
+    <script src="js/backand-scripts.js" type="text/javascript"></script>
     <!-- /build -->
     <!-- build:remove:dev -->
     <script src="https://code.jquery.com/jquery-2.2.1.min.js" type="text/javascript"></script>
@@ -30,6 +36,8 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js" type="text/javascript"></script>
     <script src="js/script.min.js" type="text/javascript"></script>
     <!-- /build -->
+    
+
 </head>
 
 <body class="container">
@@ -81,6 +89,16 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section id="leaderboard">  
+        <form id="postform">
+            <input type="text" name="name"/>
+            <input type="text" name="score"/>
+            <button type="submit">Submit</button>
+        </form>
+
+        <h2>Highscores</h2>
+        <ul>Loading..</div>
     </section>
 </body>
 <div class="modal fade" id="optionModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
