--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="snakegame";>
+<html lang="en" ng-app="snakegame" ;>
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Frog is Happy</title>
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.ico">
-    
     <!-- Backand SDK for Angular -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
     <script src="//cdn.backand.net/backand/dist/1.8.2/backand.min.js"></script>
-
     <!-- build:remove:dist -->
     <link rel="stylesheet" type="text/css" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" type="text/javascript">
     <link rel="stylesheet" type="text/css" href="../node_modules/font-awesome/css/font-awesome.min.css">
@@ -36,8 +34,6 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js" type="text/javascript"></script>
     <script src="js/script.min.js" type="text/javascript"></script>
     <!-- /build -->
-    
-
 </head>
 
 <body class="container">
@@ -46,8 +42,8 @@
             <div class="col-sm-4 col-xs-3">
                 <div class="game_info">
                     <div class="title no-mobile">Frog Is Happy</div>
-                    <div>Score: <span id="score">0</span></div>
-                    <div class="no-mobile">High Score: <span id="highscore">0</span></div>
+                    <div>Score: <span class="score">0</span></div>
+                    <!--<div class="no-mobile">High Score: <span class="highscore">0</span></div>-->
                 </div>
             </div>
             <div class="game_buttons col-sm-8 col-xs-9">
@@ -89,16 +85,6 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section id="leaderboard">  
-        <form id="postform">
-            <input type="text" name="name"/>
-            <input type="text" name="score"/>
-            <button type="submit">Submit</button>
-        </form>
-
-        <h2>Highscores</h2>
-        <ul>Loading..</div>
     </section>
 </body>
 <div class="modal fade" id="optionModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -158,6 +144,28 @@
             </div>
         </div>
     </div>
+</div>
+<div id="highscoreModal" class="modal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close">&times;</span></button>
+                <h4 class="modal-title">Game over!</h4>
+                <h1 class="score"></h1>
+            </div>
+            <form id="postform">
+                <label for="name">Enter Your Name</label>
+                <input type="text" name="name" maxlength="10" required="true" />
+                <button type="submit" class="btn">Submit</button>
+            </form>
+            <button class="btn closebtn btn-primary">Close</button>
+            <div id="leaderboard" class="modal-body">
+                <h2>Leaderboard</h2>
+                <ol>Loading..</ol>
+            </div>
+        </div>
+    </div>
+</div>
 </div>
 
 </html>
