--- a/index.html
+++ b/index.html
@@ -87,6 +87,22 @@
             </div>
         </div>
     </section>
+    <script>
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-42379375-4', 'auto');
+    ga('send', 'pageview');
+    </script>
 </body>
 <div class="modal fade" id="optionModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
@@ -150,7 +166,8 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close">&times;</span></button>
+                <button type="button" class="close">&times;</span>
+                </button>
                 <h4 class="modal-title">Game over!</h4>
                 <h1 class="score"></h1>
             </div>
