Prevent jQuery-UI from acting on footer elements with data-role=none. Set link to open in new window.

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     ga('send', 'pageview');
     </script>
 </body>
-<footer><a href="http://drewdrewthis.github.io/andrew-joia-portfolio/">
+<footer data-role="none"><a href="http://drewdrewthis.github.io/andrew-joia-portfolio/" target="_blank">
     Made with<br>
     <code>&lt;code&gt;</code><br>
     .drewdrewthis.</a>
